# cr-agent

./: .dockerignore  .env.template  .gitignore  Dockerfile  README.md  agents.py  database.py  ingest_persistent_docs.py  main.py  meeting_database.db  models.py  pyproject.toml  start.bat  start.sh  tools.py  vector_store.py
docs/: COMPLETE_SETUP.md  FRONTEND_SETUP.md  GITHUB_MODELS_SETUP.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  OLLAMA_SETUP.md  PROJECT_SUMMARY.md  QUICK_START.md  STORAGE_MANAGEMENT.md  TEST_RESULTS.md  TOOL_CALLING_ISSUE.md
frontend/: README.md  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js  index.css
frontend/src/components/: StorageManager.js
persistent_docs/: remote_work_policy.txt
tests/: debug_sql_agent.py  test_agents.py  test_cancel.py  test_document_upload.py
